--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "asyncache",
+  "name": "async-cache-fn",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@7.2.1",
+  "packageManager": "pnpm@7.4.0",
   "description": "",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/asyncache#readme",
+  "homepage": "https://github.com/antfu/async-cache-fn#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/asyncache.git"
+    "url": "git+https://github.com/antfu/async-cache-fn.git"
   },
-  "bugs": "https://github.com/antfu/asyncache/issues",
+  "bugs": "https://github.com/antfu/async-cache-fn/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
